--- a/styles.css
+++ b/styles.css
@@ -216,11 +216,16 @@ body{
     border-radius: 20px;
 }
 
-/* .home div { animation-name: home; animation-duration: 4s; animation-fill-mode: forwards; }
+.home div {
+    opacity: 0; /* Start invisible */
+    animation: home 1s ease-in forwards; /* Apply animation */
+}
+
 @keyframes home {
-    from { opacity: 0 }
-    to { opacity: 1 }
-} */
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
+
 
 @media(max-width:1024px) {
     .navItems{
